--- a/src/app/leafdeck/leafdeck.component.html
+++ b/src/app/leafdeck/leafdeck.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="example-container" [hasBackdrop]="false">
 
-  <mat-drawer #drawer mode="push" opened="true" position="start">
+  <mat-drawer #drawer mode="side" opened="true" position="start">
 
     <app-side-views></app-side-views>
 
@@ -28,9 +28,6 @@
 
     <button mat-raised-button (click)="toggleClicked(drawer.toggle())">Toggle drawer</button>
 
-
-    <button mat-raised-button (click)="GetMapState()"> Print State</button>
-    <button mat-raised-button (click)="SetMapState()">Set State</button>
   </mat-drawer-content>
 
 
