--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -4,10 +4,7 @@
             settings
         </mat-panel-title>
         <mat-panel-description>
-
-            ..
-            <mat-icon>account_circle</mat-icon>
-
+            <mat-icon>settings</mat-icon>
         </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -23,10 +20,7 @@
             regions
         </mat-panel-title>
         <mat-panel-description>
-
-            regions
-            <mat-icon>account_circle</mat-icon>
-
+            <mat-icon>subtitles</mat-icon>
         </mat-panel-description>
     </mat-expansion-panel-header>
 
