--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -39,9 +39,7 @@
       </mat-panel-title>
       <mat-panel-description>
 
-        Type your name and age
-        <mat-icon>account_circle</mat-icon>
-
+        <mat-icon>supervised_user_circle</mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -56,11 +54,12 @@
 
     <mat-expansion-panel-header>
       <mat-panel-title>
-        density
+        density 
       </mat-panel-title>
       <mat-panel-description>
-        Inform the date you wish to travel
-        <mat-icon>date_range</mat-icon>
+
+        <mat-icon>blur_on</mat-icon>
+
       </mat-panel-description>
     </mat-expansion-panel-header>
 
