--- a/src/app/views/tbl-electricity/tbl-electricity.component.html
+++ b/src/app/views/tbl-electricity/tbl-electricity.component.html
@@ -1,13 +1,5 @@
-<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
+<table  *ngIf="roadLineWithConsumptions$ | async" mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
        class="mat-elevation-z8">
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">
-      No.
-    </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
@@ -18,19 +10,19 @@
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by weight">
-      Weight
+  <ng-container matColumnDef="sum_VERBRUIK_KWH">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by sum_VERBRUIK_KWH">
+        sum_VERBRUIK_KWH
     </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.sum_VERBRUIK_KWH}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by symbol">
-      Symbol
+  <ng-container matColumnDef="avg_VERBRUIK_KWH">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by avg_VERBRUIK_KWH">
+        avg_VERBRUIK_KWH
     </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.avg_VERBRUIK_KWH}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
