--- a/src/app/views/tbl-electricity/tbl-electricity.component.html
+++ b/src/app/views/tbl-electricity/tbl-electricity.component.html
@@ -1,4 +1,4 @@
-<table  *ngIf="roadLineWithConsumptions$ | async" mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
+<table   mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
        class="mat-elevation-z8">
 
   <!-- Name Column -->
