--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -1,105 +1,105 @@
 <mat-expansion-panel expanded="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-            settings
-        </mat-panel-title>
-        <mat-panel-description>
-            <mat-icon>settings</mat-icon>
-        </mat-panel-description>
-    </mat-expansion-panel-header>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      settings
+    </mat-panel-title>
+    <mat-panel-description>
+      <mat-icon>settings</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
 
-<app-show-what-setting></app-show-what-setting>
-   
+  <app-show-what-setting></app-show-what-setting>
+
 
 
 </mat-expansion-panel>
 <mat-expansion-panel expanded="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>
-           filter data by regions
-        </mat-panel-title>
-        <mat-panel-description>
-            <mat-icon>subtitles</mat-icon>
-        </mat-panel-description>
-    </mat-expansion-panel-header>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      filter data by regions
+    </mat-panel-title>
+    <mat-panel-description>
+      <mat-icon>subtitles</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
 
-    <app-region-tree></app-region-tree>
+  <app-region-tree></app-region-tree>
 
 
 </mat-expansion-panel>
 
 
 
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        chart population
-      </mat-panel-title>
-      <mat-panel-description>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      chart population
+    </mat-panel-title>
+    <mat-panel-description>
 
-        <mat-icon>supervised_user_circle</mat-icon>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-
-
-    <app-chart></app-chart>
+      <mat-icon>supervised_user_circle</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
 
-  </mat-expansion-panel>
+  <app-chart></app-chart>
 
 
-  <mat-expansion-panel>
-
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        density 
-      </mat-panel-title>
-      <mat-panel-description>
-
-        <mat-icon>blur_on</mat-icon>
-
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-
-    <app-chart2></app-chart2>
-
-  </mat-expansion-panel>
+</mat-expansion-panel>
 
 
+<mat-expansion-panel>
 
-  <mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      density
+    </mat-panel-title>
+    <mat-panel-description>
 
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        streets gas usage 
-      </mat-panel-title>
-      <mat-panel-description>
+      <mat-icon>blur_on</mat-icon>
 
-        <mat-icon> local_gas_station</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
-      </mat-panel-description>
+  <app-chart2></app-chart2>
 
-
-    </mat-expansion-panel-header>
+</mat-expansion-panel>
 
 
 
-  </mat-expansion-panel>
+<mat-expansion-panel>
+
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      streets gas usage
+    </mat-panel-title>
+    <mat-panel-description>
+
+      <mat-icon> local_gas_station</mat-icon>
+
+    </mat-panel-description>
 
 
-  <mat-expansion-panel>
+  </mat-expansion-panel-header>
 
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        streets electricity usage 
-      </mat-panel-title>
-      <mat-panel-description>
-        <mat-icon>battery_charging_full</mat-icon>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
+  <app-tbl-gas></app-tbl-gas>
+
+</mat-expansion-panel>
+
+
+<mat-expansion-panel>
+
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      streets electricity usage
+    </mat-panel-title>
+    <mat-panel-description>
+      <mat-icon>battery_charging_full</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
   <app-tbl-electricity></app-tbl-electricity>
 
-  </mat-expansion-panel>
+</mat-expansion-panel>
