--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -100,6 +100,6 @@
     </mat-panel-description>
   </mat-expansion-panel-header>
 
-  <app-tbl-electricity></app-tbl-electricity>
+  <!-- <app-tbl-electricity></app-tbl-electricity> -->
 
 </mat-expansion-panel>
