--- a/src/app/views/tbl-electricity/tbl-electricity.component.html
+++ b/src/app/views/tbl-electricity/tbl-electricity.component.html
@@ -6,7 +6,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
       Name
     </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element" [title]="element.name"> {{element.name | truncate:15}} </td>
   </ng-container>
 
   <!-- Weight Column -->
