--- a/src/app/views/tbl-gas/tbl-gas.component.html
+++ b/src/app/views/tbl-gas/tbl-gas.component.html
@@ -1,3 +1,4 @@
+<p>after ckecking Sum of Energy Consumption in setting the table will be populated</p>
 <table   mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
        class="mat-elevation-z8">
 
@@ -6,7 +7,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">
       Name
     </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element" [title]="element.name"> {{element.name | truncate:15}} </td>
   </ng-container>
 
   <!-- Weight Column -->
@@ -22,7 +23,7 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by avg_VERBRUIK_M3">
         avg_VERBRUIK_M3
     </th>
-    <td mat-cell *matCellDef="let element"> {{element.avg_VERBRUIK_M3}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.avg_VERBRUIK_M3 }} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
