--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -73,6 +73,23 @@
 
   <mat-expansion-panel-header>
     <mat-panel-title>
+      building-functions
+    </mat-panel-title>
+    <mat-panel-description>
+
+      <mat-icon> pie_chart</mat-icon>
+
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+
+  <app-building-functions></app-building-functions>
+
+</mat-expansion-panel>
+
+<mat-expansion-panel>
+
+  <mat-expansion-panel-header>
+    <mat-panel-title>
       streets gas usage
     </mat-panel-title>
     <mat-panel-description>
