--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,3 +63,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background: #000;
   opacity: 0.75 !important;
 }
+
+
+.ENERGY_LABEL_tooltip{
+  color: white;
+  background-color: maroon;
+}
