--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -1,22 +1,6 @@
 <mat-expansion-panel expanded="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
-      settings
-    </mat-panel-title>
-    <mat-panel-description>
-      <mat-icon>settings</mat-icon>
-    </mat-panel-description>
-  </mat-expansion-panel-header>
-
-
-  <app-show-what-setting></app-show-what-setting>
-
-
-
-</mat-expansion-panel>
-<mat-expansion-panel expanded="true">
-  <mat-expansion-panel-header>
-    <mat-panel-title>
       filter data by regions
     </mat-panel-title>
     <mat-panel-description>
@@ -26,6 +10,24 @@
 
 
   <app-region-tree></app-region-tree>
+
+
+</mat-expansion-panel>
+
+
+<mat-expansion-panel expanded="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      select the feature you wanna see
+    </mat-panel-title>
+    <mat-panel-description>
+      <mat-icon>settings</mat-icon>
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+
+
+  <app-show-what-setting></app-show-what-setting>
+
 
 
 </mat-expansion-panel>
