--- a/src/app/views/tbl-electricity/tbl-electricity.component.html
+++ b/src/app/views/tbl-electricity/tbl-electricity.component.html
@@ -1,3 +1,4 @@
+<p *ngIf="noData">after ckecking Sum of Energy Consumption in the setting this table will be populated</p>
 <table   mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
        class="mat-elevation-z8">
 
