--- a/src/app/views/building-functions/building-functions.component.scss
+++ b/src/app/views/building-functions/building-functions.component.scss
@@ -1,6 +1,9 @@
 .chart{
     width: 500px;
     height: 500px;
-    display: inline-block;   
-    background-color: wheat; 
+    display: inline-block;    
+}
+.chartWrapper{
+    display: block;
+    text-align: center;
 }
