--- a/src/app/Layout/nav/nav.component.html
+++ b/src/app/Layout/nav/nav.component.html
@@ -9,10 +9,12 @@
 
       <button mat-icon-button color="accent" class="reactToBreakpoint btnDrawer" (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
-      </button> <span>GeoApp TAUW TEAM</span>
-
+      </button> <span>  </span> <span class="logoTextClass">Smart Neighbourhood Pofile Prototype  -  TEAM TAUW</span>
+      
     </mat-toolbar>
-
+    
+   
+     
 
     <router-outlet></router-outlet>
 
