gradiant-bk=maintoolbar

--- a/src/app/Layout/nav/nav.component.html
+++ b/src/app/Layout/nav/nav.component.html
@@ -5,7 +5,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content #sidenavContent>
-    <mat-toolbar color="primary">
+    <mat-toolbar class="mainToolbar" color="primary">
 
       <button mat-icon-button color="accent" class="reactToBreakpoint btnDrawer" (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
