--- a/src/app/Layout/nav/nav.component.scss
+++ b/src/app/Layout/nav/nav.component.scss
@@ -2,6 +2,11 @@
 
 .sidenav-container {
   height: 100%;
+
+}
+.mainToolbar{
+  background: linear-gradient(90deg, rgb(22 17 17) 0%, rgb(68 9 121 / 75%) 60%, rgb(0 215 225) 100%) !important;
+
 }
 
 .sidenav {
