--- a/src/app/Layout/nav/nav.component.html
+++ b/src/app/Layout/nav/nav.component.html
@@ -9,7 +9,8 @@
 
       <button mat-icon-button color="accent" class="reactToBreakpoint btnDrawer" (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
-      </button> <span>  </span> <span class="logoTextClass">Smart Neighbourhood Pofile Prototype  -  TEAM TAUW</span>
+      </button>  
+       <span class="logoTextClass">Smart Neighbourhood Pofile  -  TEAM TAUW</span>
       
     </mat-toolbar>
     
