--- a/src/app/Layout/nav/nav.component.scss
+++ b/src/app/Layout/nav/nav.component.scss
@@ -5,7 +5,7 @@
 
 }
 .mainToolbar{
-  background: linear-gradient(90deg, rgb(22 17 17) 0%, rgb(68 9 121 / 75%) 60%, rgb(0 215 225) 100%) !important;
+  background: linear-gradient(90deg,  #161111  0%, #440979bf 60%, #00d7e1 100%) !important;
 
 }
 
