--- a/src/app/Layout/nav/nav.component.html
+++ b/src/app/Layout/nav/nav.component.html
@@ -10,7 +10,7 @@
       <button mat-icon-button color="accent" class="reactToBreakpoint btnDrawer" (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
       </button>  
-       <span class="logoTextClass">Smart Neighbourhood Pofile</span>
+       <span class="logoTextClass">Smart Neighbourhood Profile - SNEIPR</span>
       
     </mat-toolbar>
     
