--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -85,6 +85,10 @@
   </mat-expansion-panel-header>
 
   <app-building-functions></app-building-functions>
+ 
+  <button mat-icon-button   color="accent" (click)="openBuildingFunctionsDialog()"  aria-label="open modal">
+    <mat-icon>open_in_new</mat-icon>
+  </button>
 
 </mat-expansion-panel>
 
