buildings by owners

--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -92,6 +92,25 @@
 
 </mat-expansion-panel>
 
+
+<mat-expansion-panel>
+
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      building by owners
+    </mat-panel-title>
+    <mat-panel-description>
+
+      <mat-icon> pie_chart</mat-icon>
+
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+
+  <app-building-owner></app-building-owner>
+ 
+   
+
+</mat-expansion-panel>
 <mat-expansion-panel>
 
   <mat-expansion-panel-header>
