building by construction year

--- a/src/app/leafdeck/side-views/side-views.component.html
+++ b/src/app/leafdeck/side-views/side-views.component.html
@@ -93,6 +93,28 @@
 </mat-expansion-panel>
 
 
+
+
+<mat-expansion-panel>
+
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      building by build years
+    </mat-panel-title>
+    <mat-panel-description>
+
+      <mat-icon> pie_chart</mat-icon>
+
+    </mat-panel-description>
+  </mat-expansion-panel-header>
+
+  <app-building-build-year></app-building-build-year>
+ 
+
+</mat-expansion-panel>
+
+
+
 <mat-expansion-panel>
 
   <mat-expansion-panel-header>
